# erlaubnis

./: .gitignore  CHANGELOG.md  README.md  config.py  pyproject.toml  run.py
.github/ISSUE_TEMPLATE/: ADR  ADR.yml
app/: __init__.py  models.py
app/auth/: apis.py  controllers.py  enum.py  validators.py
app/client/: __init__.py  controllers.py  models.py  serialisers.py
app/core/: __init__.py  exceptions.py  models.py  validators.py
app/templates/: base.html
app/user/: __init__.py  apis.py  controller.py  models.py  serialisers.py
config/: __init__.py  default.py  dev.py
migrations/: env.py
migrations/versions/: 52ef39f4c96a_.py  c8d9ccdaeff6_.py  ed1c8e5f873e_.py
tests/: client_crud_controller.py  client_tests.py  conftest.py  test_oauth_routes.py
tests/functional/: test_oauth_routes.py  user_controller.py
tests/unit/: client_tests.py
